--- a/week2/DuckData/FileIO/FileIO.csproj
+++ b/week2/DuckData/FileIO/FileIO.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\DuckData.Repo\DuckData.Repo.csproj" />
+    <ProjectReference Include="..\DuckData.Models\DuckData.Models.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
