update MyAPI with DuckData repo and models

--- a/week3/MyAPI/MyAPI.API/MyAPI.API.csproj
+++ b/week3/MyAPI/MyAPI.API/MyAPI.API.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DuckData.Repo\DuckData.Repo.csproj" />
+    <ProjectReference Include="..\DuckData.Models\DuckData.Models.csproj" />
+  </ItemGroup>
+
 </Project>
