--- a/.github/workflows/patient-tracker-api.yml
+++ b/.github/workflows/patient-tracker-api.yml
@@ -21,6 +21,24 @@ jobs:
     - name: build-sanity-check
       run: echo "build sanity check"
 
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 8.0.x
+
+    - name: Checkout The Repo
+      uses: actions/checkout@v4
+
+    - name: Dotnet Restore
+      run: dotnet restore ./week7/ReactDemo/patientTracker/
+
+    - name: Dotnet Build
+      run: dotnet build --no-restore ./week7/ReactDemo/patientTracker/
+    
+    - name: Dotnet Test
+      run: dotnet test --no-build --verbosity normal ./week7/ReactDemo/patientTracker/
+    
+
     
 
   deploy:
