--- a/.github/workflows/patient-tracker-api.yml
+++ b/.github/workflows/patient-tracker-api.yml
@@ -38,8 +38,35 @@ jobs:
     - name: Dotnet Test
       run: dotnet test --no-build --verbosity normal ./week7/ReactDemo/patientTracker/
     
+  dockerize:
+    runs-on: ubuntu-latest
 
+    steps:
+    - name: dockerize-sanity-check
+      run: echo "dockerize sanity check"
+
+
+#log in to dockerhub
+#push
+    - name: Checkout Source
+      uses: actions/checkout@v4
+
+    - name: Install Docker
+      uses: docker/setup-buildx-action@v2
     
+    - name: Login to dockerhub
+      uses: docker/login-action@v2
+      with:
+        registry: https://index.docker.io/v1/
+        username: ${{ secrets.Dockerhub_Username }}
+        password: ${{ secrets.Dockerhub_Password }}
+
+    - name: Build and Push to dockerhub
+      uses: docker/build-push-action
+      with:
+        context: ./week7/ReactDemo/patientTracker/
+        push: true
+        tags: hawkinsr/patient-tracker-api:${{ github.sha }} 
 
   deploy:
     runs-on: ubuntu-latest
