--- a/.github/workflows/patient-tracker-api.yml
+++ b/.github/workflows/patient-tracker-api.yml
@@ -45,9 +45,6 @@ jobs:
     - name: dockerize-sanity-check
       run: echo "dockerize sanity check"
 
-
-#log in to dockerhub
-#push
     - name: Checkout Source
       uses: actions/checkout@v4
 
@@ -62,7 +59,7 @@ jobs:
         password: ${{ secrets.Dockerhub_Password }}
 
     - name: Build and Push to dockerhub
-      uses: docker/build-push-action
+      uses: docker/build-push-action@v5
       with:
         context: ./week7/ReactDemo/patientTracker/
         push: true
