--- a/.github/workflows/patient-tracker-api.yml
+++ b/.github/workflows/patient-tracker-api.yml
@@ -55,8 +55,8 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.Dockerhub_Username }}
-        password: ${{ secrets.Dockerhub_Password }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Build and Push to dockerhub
       uses: docker/build-push-action@v5
