--- a/.github/workflows/patient-tracker-api.yml
+++ b/.github/workflows/patient-tracker-api.yml
@@ -39,6 +39,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal ./week7/ReactDemo/patientTracker/
     
   dockerize:
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
@@ -66,8 +67,17 @@ jobs:
         tags: hawkinsr/patient-tracker-api:${{ github.sha }} 
 
   deploy:
+    needs: dockerize
     runs-on: ubuntu-latest
 
     steps:
     - name: deploy-sanity-check
       run: echo "deploy sanity check"
+
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'patienttracker-api'
+        slot-name: 'production'
+        publish-profile: ${{ secret.AZURE_PUBLISH_PROFILE_API }}
+        images: 'index.docker.io/hawkinsr/patient-tracker-api:${{ github.sha }}'
